--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brady Burgener | WDD 131</title>
+    <meta name="description" content="basic page layout">
+    <meta name="author" content="Brady Burgener">
     <link rel="stylesheet" href="./styles/layout.css">
 </head>
 <body>
