corrects some errors

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>WDD 131 – Dynamic Web Fundamentals – Brady Burgener</title>
     <meta name="description" content="Brady Burgener's homepage for WDD131 – Dynamic Web Fundamentals">
     <meta name="author" content="Brady Burgener">
+    <link rel="stylesheet" href="./styles/base.css">
 </head>
 <body>
     <header>
@@ -42,4 +43,5 @@
     </footer>
     
 </body>
+<script src="./scripts/getdates.js"></script>
 </html>
