--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Brady Burgener's homepage for WDD131 – Dynamic Web Fundamentals">
     <meta name="author" content="Brady Burgener">
     <link rel="stylesheet" href="./styles/base.css">
+    <script src="./scripts/getdates.js" defer></script>
 </head>
 <body>
     <header>
@@ -41,7 +42,5 @@
         <p>&copy;<span id="currentyear"></span> | Brady Burgener | Idaho, USA</p>
         <p id="lastModified"></p>
     </footer>
-    
 </body>
-<script src="./scripts/getdates.js"></script>
 </html>
