--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Brady Burgener's homepage for WDD131 – Dynamic Web Fundamentals">
     <meta name="author" content="Brady Burgener">
     <link rel="stylesheet" href="./styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Yarndings+20&display=swap" rel="stylesheet">
     <script src="./scripts/getdates.js" defer></script>
 </head>
 <body>
@@ -31,7 +34,7 @@
         </section>
         <section class="card">
             <h2>Idaho, USA</h2>
-            <img src="./images/flag_of_the_united_states.jpg" alt="Flag of the United States of America">
+            <img src="./images/USA_flag.jpg" alt="Flag of the United States of America">
             <p>
                 United States of America is the third most populous country in the world (behind India and China). It is
                 located in the middle of North America. 
