--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
         <section class="card">
             <h2>Idaho, USA</h2>
-            <img src="./images/USA_flag.jpg" alt="Flag of the United States of America">
+            <img src="./images/usa_flag.jpg" alt="Flag of the United States of America">
             <p>
                 United States of America is the third most populous country in the world (behind India and China). It is
                 located in the middle of North America. 
@@ -42,7 +42,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy;<span id="currentyear"></span> | Brady Burgener | Idaho, USA</p>
+        <p>&copy;<span id="currentyear"></span> <span class="yarndings">a</span> Brady Burgener <span class="yarndings">a</span> Idaho, USA</p>
         <p id="lastModified"></p>
     </footer>
 </body>
