adds required homepage items

--- a/index.html
+++ b/index.html
@@ -26,19 +26,43 @@
         <h1>Brady Burgener</h1>
         <section class="card">
             <h2>About Me</h2>
-            <img src="./images/my_photo.jpg" alt="A photo of Brady Burgener">
-            <p>
-                My name is Brady.  I was born in Utah and live with my family in Idaho.  I am currently working on my second
-                Bachelor of Science degree.
-            </p>
+            <div class="nofloat">
+                <div class="floatright">
+                    <img src="./images/my_photo.jpg" alt="A photo of Brady Burgener">
+                </div>
+                <p>
+                    My name is Brady.  I was born in Utah and live with my family in Idaho.  I am currently working on my second
+                    Bachelor of Science degree.
+                </p>
+            </div>
+            <div class="nofloat">
+                <h3>Idaho, USA</h3>
+                <div class="floatleft">
+                    <img src="./images/usa_flag.jpg" alt="Flag of the United States of America">
+                    <figcaption>United States Flag</figcaption>
+                </div>
+                <p>
+                    United States of America is the third most populous country in the world (behind India and China). It is
+                    located in the middle of North America. 
+                </p>
+            </div>
         </section>
         <section class="card">
-            <h2>Idaho, USA</h2>
-            <img src="./images/usa_flag.jpg" alt="Flag of the United States of America">
-            <p>
-                United States of America is the third most populous country in the world (behind India and China). It is
-                located in the middle of North America. 
-            </p>
+            <h2>Web Dev Resources</h2>
+            <div class="align_center">
+                <ul>
+                    <li><a href="https://dev.to/">Dev.to Community</a></li>
+                    <li><a href="https://www.smashingmagazine.com/">Smashing Magazine</a></li>
+                    <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
+                    <li><a href="https://www.w3schools.com/">W3 School</a></li>
+                    <li><a href="https://www.udacity.com/">Udacity</a></li>
+                    <li><a href="https://squoosh.app/">Squoosh</a></li>
+                    <li><a href="https://github.com/">GitHub</a></li>
+                    <li><a href="https://www.hackthebox.com/">Hack the Box</a></li>
+                </ul>
+                <img src="./images/software-developer.jpg" alt="a person coding at a computer">
+            </div> 
+            
         </section>
     </main>
     <footer>
