corrects html error

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 </p>
             </div>
             <div class="nofloat">
-                <h3>Idaho, USA</h3>
-                <div class="floatleft">
+                <h3>USA</h3>
+                <figure class="floatleft">
                     <img src="./images/usa_flag.jpg" alt="Flag of the United States of America">
                     <figcaption>United States Flag</figcaption>
-                </div>
+                </figure>
                 <p>
                     United States of America is the third most populous country in the world (behind India and China). It is
                     located in the middle of North America. 
