--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="https://www.linkedin.com/in/brady-burgener/">LinkedIn</a>
             <a href="https://byupw.instructure.com/">Canvas</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/2?lang=eng&id=p15#p15">Scripture</a>
-            <a href="">Final Project</a>
+            <a href="#">Final Project</a>
         </nav>
     </header>
     <main>
