update style for temples

--- a/temples.html
+++ b/temples.html
@@ -25,40 +25,40 @@
     <main>
         <h1>Temples</h1>
         <figure>
-            <img src="" alt="">
-            <figcaption></figcaption>
+            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
+            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
         </figure>
         <figure>
-            <img src="" alt="">
-            <figcaption></figcaption>
+            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
+            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
         </figure>
         <figure>
-            <img src="" alt="">
-            <figcaption></figcaption>
+            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
+            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
         </figure>
         <figure>
-            <img src="" alt="">
-            <figcaption></figcaption>
+            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
+            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
         </figure>
         <figure>
-            <img src="" alt="">
-            <figcaption></figcaption>
+            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
+            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
         </figure>
         <figure>
-            <img src="" alt="">
-            <figcaption></figcaption>
+            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
+            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
         </figure>
         <figure>
-            <img src="" alt="">
-            <figcaption></figcaption>
+            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
+            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
         </figure>
         <figure>
-            <img src="" alt="">
-            <figcaption></figcaption>
+            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
+            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
         </figure>
         <figure>
-            <img src="" alt="">
-            <figcaption></figcaption>
+            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
+            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
         </figure>
     </main>
     <footer>
