--- a/temples.html
+++ b/temples.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temples | Brady Burgener</title>
+    <meta name="description" content="Temple album by Brady Burgener">
+    <meta name="author" content="Brady Burgener">
     <link rel="stylesheet" href="./styles/temples.css">
     <link rel="stylesheet" href="./styles/temples-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
