--- a/temples.html
+++ b/temples.html
@@ -6,12 +6,12 @@
     <title>Temples | Brady Burgener</title>
     <meta name="description" content="Temple album by Brady Burgener">
     <meta name="author" content="Brady Burgener">
-    <link rel="stylesheet" href="./styles/temples.css">
-    <link rel="stylesheet" href="./styles/temples-large.css">
+    <link rel="stylesheet" href="styles/temples.css">
+    <link rel="stylesheet" href="styles/temples-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Yarndings+20&display=swap" rel="stylesheet">
-    <script src="./scripts/temples.js" defer></script>
+    <script src="scripts/temples.js" defer></script>
 </head>
 <body>
     <header>
