adds hamburger button

--- a/temples.html
+++ b/temples.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temples | Brady Burgener</title>
-    <meta name="description" content="Temple album by Brady Burgener">
+    <meta name="description" content="Mountain Timpanogos Temple album by Brady Burgener with hamburger menu">
     <meta name="author" content="Brady Burgener">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
@@ -16,6 +16,7 @@
 <body>
     <header>
         <span class="header">Temple Album</span>
+        <button id="menu"></button>
         <nav>
             <a href="#">Home</a>
             <a href="#">Old</a>
