--- a/temples.html
+++ b/temples.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <span class="header">Temple Album</span>
-        <button id="menu"></button>
+        <button id="menu" title="hamberger menu"></button>
         <nav>
             <a href="#">Home</a>
             <a href="#">Old</a>
