--- a/places.html
+++ b/places.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Idaho Falls | Places | Brady Burgener</title>
-    <meta name="description" content="">
+    <meta name="description" content="This is a informational page about Idaho Falls.">
     <meta name="author" content="Brady Burgener">
     <link rel="stylesheet" href="./styles/places.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
         </div>   
         <section class="data">
             <h2>Data</h2>
-            <label for=""></label>
+            <!-- <label for=""></label>
             <p></p>
             <label for=""></label>
             <p></p>
@@ -37,19 +37,19 @@
             <label for=""></label>
             <p></p>
             <label for=""></label>
-            <p></p>
+            <p></p> -->
         </section>
         <section class="weather">
             <h2>Weather</h2>
             <img src="./images/weather_icon.svg" alt="weather icon">
-            <label for=""></label>
+            <!-- <label for=""></label>
             <p></p>
             <label for=""></label>
             <p></p>
             <label for=""></label>
             <p></p>
             <label for=""></label>
-            <p></p>
+            <p></p> -->
         </section>
     </main>
     <footer>
