adds requirements to places

--- a/places.html
+++ b/places.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Idaho Falls | Places | Brady Burgener</title>
-    <meta name="description" content="This is a informational page about Idaho Falls.">
+    <meta name="description" content="This is a informational page about Idaho Falls. It includes weather infomation.">
     <meta name="author" content="Brady Burgener">
     <link rel="stylesheet" href="./styles/places.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,34 +14,37 @@
 </head>
 <body>
     <header>
-        <h1>Idaho Falls, Idaho</h1>
+        <h1>Idaho</h1>
     </header>
     <main>
         <div class="hero">
             <picture>
-                <source media="(min-width: 1000px)" srcset="./images/hero-large.webp">
-                <source media="(min-width: 500px)" srcset="./images/hero-medium.webp">
-                <img src="./images/hero-small.webp" alt="Mountain Timpanogos Temple" width="1500" height="750">
+                <source media="(min-width: 800px)" srcset="./images/hero-large.webp"> 
+                <!--Photo by <a href="https://unsplash.com/@nunit0616?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Sunit Kajarekar</a> on <a href="https://unsplash.com/photos/a-large-waterfall-with-a-church-in-the-background-vyRdMxdSVxI?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>  -->
+                <img src="./images/hero-small.webp" alt="Picture of Idaho Falls" width="1000" height="auto">
+                <!-- Photo by <a href="https://unsplash.com/@danielhombre19?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Dan Cutler</a> on <a href="https://unsplash.com/photos/green-trees-under-blue-sky-during-daytime-kZw2l_oyGUQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
             </picture>
         </div>   
         <section class="data">
             <h2>Data</h2>
-            <!-- <label for=""></label>
-            <p></p>
-            <label for=""></label>
-            <p></p>
-            <label for=""></label>
-            <p></p>
-            <label for=""></label>
-            <p></p>
-            <label for=""></label>
-            <p></p>
-            <label for=""></label>
-            <p></p> -->
+            <label>Area:</label>
+            <p>83,642 sq mi</p>
+            <label>Population:</label>
+            <p>2,001,619</p>
+            <label>Capital:</label>
+            <p>Boise</p>
+            <label>Languages:</label>
+            <p>English</p>
+            <label>Currency:</label>
+            <p>US Dollar</p>
+            <label>Time Zone:</label>
+            <p>UTC -7:00 / -6:00</p>
+            <label>Calling Code:</label>
+            <p>+1-208 or +1-986</p>
         </section>
         <section class="weather">
             <h2>Weather</h2>
-            <img src="./images/weather_icon.svg" alt="weather icon">
+            <img src="./images/weather_icon.svg" alt="weather icon" class="weatherIcon">
             <!-- <label for=""></label>
             <p></p>
             <label for=""></label>
