--- a/places.html
+++ b/places.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Idaho Falls | Places | Brady Burgener</title>
+    <title>Idaho | Places | Brady Burgener</title>
     <meta name="description" content="This is a informational page about Idaho Falls. It includes weather infomation.">
     <meta name="author" content="Brady Burgener">
     <link rel="stylesheet" href="./styles/places.css">
+    <link rel="stylesheet" href="./styles/places-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Yarndings+20&display=swap" rel="stylesheet">
@@ -21,7 +22,7 @@
             <picture>
                 <source media="(min-width: 800px)" srcset="./images/hero-large.webp"> 
                 <!--Photo by <a href="https://unsplash.com/@nunit0616?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Sunit Kajarekar</a> on <a href="https://unsplash.com/photos/a-large-waterfall-with-a-church-in-the-background-vyRdMxdSVxI?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>  -->
-                <img src="./images/hero-small.webp" alt="Picture of Idaho Falls" width="1000" height="750">
+                <img src="./images/hero-small.webp" alt="Picture of Idaho Falls" width="1000" height="750" id="image">
                 <!-- Photo by <a href="https://unsplash.com/@danielhombre19?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Dan Cutler</a> on <a href="https://unsplash.com/photos/green-trees-under-blue-sky-during-daytime-kZw2l_oyGUQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
             </picture>
         </div>   
@@ -44,7 +45,7 @@
         </section>
         <section class="weather">
             <h2>Weather</h2>
-            <img src="./images/weather_icon.svg" alt="weather icon" class="weatherIcon">
+            <!-- <img src="./images/weather_icon.svg" alt="weather icon" class="weatherIcon"> -->
             <!-- <label for=""></label>
             <p></p>
             <label for=""></label>
