corrects weather icon

--- a/places.html
+++ b/places.html
@@ -45,6 +45,7 @@
         </section>
         <section class="weather">
             <h2>Weather</h2>
+            <img src="./images/weather_icon.svg" alt="weather icon" id="weatherIcon">
         </section>
     </main>
     <footer>
