--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -18,51 +18,15 @@
         <span class="header">Temple Album</span>
         <button id="menu" title="hamburger menu"></button>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Old</a>
-            <a href="#">New</a>
-            <a href="#">Large</a>
-            <a href="#">Small</a>
+            <a href="#" id="home">Home</a>
+            <a href="#" id="old">Old</a>
+            <a href="#" id="new">New</a>
+            <a href="#" id="large">Large</a>
+            <a href="#" id="small">Small</a>
         </nav>
     </header>
     <main>
-        <h1>Temples</h1>
-        <figure>
-            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
-            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
-        </figure>
-        <figure>
-            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
-            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
-        </figure>
-        <figure>
-            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
-            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
-        </figure>
-        <figure>
-            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
-            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
-        </figure>
-        <figure>
-            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
-            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
-        </figure>
-        <figure>
-            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
-            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
-        </figure>
-        <figure>
-            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
-            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
-        </figure>
-        <figure>
-            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
-            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
-        </figure>
-        <figure>
-            <img src="./images/timpanogos.jpg" alt="Mount Timpanogos Temple">
-            <figcaption>Mount Timapnaogos Temple, Utah</figcaption>
-        </figure>
+        <h1>Temples</h1> 
     </main>
     <footer>
         <p>&copy;<span id="currentyear"></span> <span class="yarndings">a</span> Brady Burgener <span class="yarndings">a</span> Idaho, USA</p>
