--- a/week04/lazyload.html
+++ b/week04/lazyload.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LazyLoading | Brady Burgener</title>
     <link rel="stylesheet" href="./styles/lazyload.css" />
-    <script src="./scripts/lazyload.js" defer></script>
+    <!-- <script src="./scripts/lazyload.js" defer></script> -->
   </head>
   <body>
     <main>
