adds style to filtered temples

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temples | Brady Burgener</title>
-    <meta name="description" content="Mountain Timpanogos Temple album by Brady Burgener with hamburger menu">
+    <title>Filtered Temples | Brady Burgener</title>
+    <meta name="description" content="Ten Temple album by Brady Burgener with hamburger menu">
     <meta name="author" content="Brady Burgener">
     <link rel="stylesheet" href="styles/filtered-temples.css">
+    <link rel="stylesheet" href="styles/filtered-temples-medium.css">
     <link rel="stylesheet" href="styles/filtered-temples-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,6 +28,7 @@
     </header>
     <main>
         <h1>Temples</h1> 
+        <div class="temples"></div>
     </main>
     <footer>
         <p>&copy;<span id="currentyear"></span> <span class="yarndings">a</span> Brady Burgener <span class="yarndings">a</span> Idaho, USA</p>
