--- a/week05/Form-start/index.html
+++ b/week05/Form-start/index.html
@@ -11,9 +11,6 @@
     <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-
-
-
     <!-- STYLE SHEETS -->
     <link href="css/normalize.css" rel="stylesheet">
     <!-- phone-default -->
@@ -22,8 +19,6 @@
     <link href="css/medium.css" rel="stylesheet">
     <!-- enhance-desktop -->
     <link href="css/large.css" rel="stylesheet">
-
-
      
 </head>
 <body>
@@ -44,7 +39,7 @@
 <!-- CONTENT HERE -->
     <main>
         <h1>Course Proposal Application</h1>
-        <form method="get" action="thanks.html">
+        <form method="get" action="thanks.html" class="wf1">
             <fieldset>
                 <legend>Applicant Information</legend>
                 <label>First Name* <input type="text" name="fname" required></label>
@@ -62,10 +57,10 @@
                 <label><input type="radio" name="audience" value="advanced">Advanced</label>
 
                 <div>Software Needed</div>
-                <label><input type="checkbox" name="editing" value="yes">Photo Editing</label>
                 <label><input type="checkbox" name="code" value="yes">Coding</label>
-                <label><input type="checkbox" name="process" value="yes">Preprocessor</label>
                 <label><input type="checkbox" name="client" value="yes">FTP Client</label>
+                <label><input type="checkbox" name="editing" value="yes">Photo Editing</label>
+                <label><input type="checkbox" name="process" value="yes">Preprocessor</label>
             </fieldset>
 
             <fieldset>
@@ -73,7 +68,7 @@
                 <label>Anticipated Completion Date <input type="date" name="completedDate"></label>
                 <label>Course Subject
                     <select name="subject">
-                        <option value="">Please Select</option>
+                        <option value="">Please Select &#9662;</option>
                         <option value="software">Software Development</option>
                         <option value="creative">Creative Professional</option>
                         <option value="info">Information Technology</option>
