--- a/form.html
+++ b/form.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Yarndings+20&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/form-small.css">
+    <link rel="stylesheet" href="./styles/form-large.css">
     <script src="./scripts/form.js" defer></script>
 </head>
 <body>
