--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form | Brady Burgener</title>
-    <meta name="description" content="This page is for a product reveiw submition">
+    <meta name="description" content="This page is for a product reveiw submition made by Brady">
     <meta name="author" content="Brady Burgener">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
