--- a/review.html
+++ b/review.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reveiw | Brady Burgener</title>
+    <meta name="description" content="This page is for a product reveiws thankyou page made by Brady">
+    <meta name="author" content="Brady Burgener">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Yarndings+20&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/form-small.css">
+    <link rel="stylesheet" href="./styles/form-large.css">
+    <script src="./scripts/form.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Reviews</h1>
+    </header>
+    <div class="thankyou"></div>
+    <table class="review">
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Average Rating</th>
+        </tr>
+    </table>
+    <footer>
+        <p>&copy;<span id="currentyear"></span> <span class="yarndings">a</span> Brady Burgener <span class="yarndings">a</span> Idaho, USA</p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
 </html>
