--- a/form.html
+++ b/form.html
@@ -56,7 +56,7 @@
                 <label for="name" class="section">Your Name (Optional)<input type="text" name="name" id="name"></label>
             </div>
 
-            <input type="submit" value="Post Review">
+            <input type="submit" value="Post Review" class="submit">
         </form>
     </main>
     <footer>
