standard color types

--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form | Brady Burgener</title>
+    <title>Product Review | Brady Burgener</title>
     <meta name="description" content="This page is for a product reveiw submition made by Brady">
     <meta name="author" content="Brady Burgener">
     <link rel="preconnect" href="https://fonts.googleapis.com">
