updates site name

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -30,8 +30,14 @@ Reason: I want to create a new website for my art.
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Planning Document | Brady Burgener</title>
-    <meta name="description" content="">
+    <meta name="description" content="Website Planning Document for an art website called Burgener Art">
     <meta name="author" content="Brady Burgener">
+    <link rel="stylesheet" href="./styles/siteplan.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Yarndings+20&display=swap" rel="stylesheet">
+    
+    <script src="./scripts/siteplan.js" defer></script>
 </head>
 <body>
     <header>
@@ -40,13 +46,9 @@ Reason: I want to create a new website for my art.
     <main>
         <section>
             <h2>Site Name</h2>
-            Site Name: The site or domain name (along with a logo) is the primary identifier and is critical for branding, 
-            visibility, and recognition. Securing a domain name that is available to purchase is normally important but not 
-            required in this class. You will need to provide a valid site name relevant to your project, along with a short 
-            description of why you chose it.
-                Example: Bay Area eBiking Club
-                • This name represents a club that is focused on electric biking in the San Francisco Bay Area.
-                Optional domain availability: bay-ebike.org
+            <p>Website Name: Burgener Art</p>
+            <p>Domain Name: BurgenerArt.com</p>
+            <p>This name represents an art buisness that is focused on Oil Painting by Brady Burgener.</p>
         </section>
         <section>
             <h2>Site Purpose</h2>
