updates site purpose

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -52,10 +52,11 @@ Reason: I want to create a new website for my art.
         </section>
         <section>
             <h2>Site Purpose</h2>
-            Site Purpose: The site purpose describes your site's scope as well as the services and information that will be provided.
-                Example: for the Bay Area eBiking Club
-                • The site provides a hub for regional e-biking by providing trail and e-bike recommendation information along with a 
-                membership information form.
+            <p>This site is for Burgener Art.</p>
+            <p>
+                This site provides a hub for people looking for art produced by Brady Burgener.  
+                It will provide a way for the images to be searched, a bio for the artist, and subscription form.
+            </p>
         </section>
         <section>
             <h2>Scenarios</h2>
