--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -77,11 +77,16 @@ Reason: I want to create a new website for my art.
         </section>
         <section>
             <h2>Typography</h2>
-            Typography: The typography section of the planning document provides examples of the fonts to be used and where 
-            they are to be applied. You should select no less than one font and no more than three fonts. Indicate where each 
-            font will be used (such as headings, body, and so on). Other fonts can be used for special circumstances or sections 
-            as needed.
-                Choosing Web Fonts Beginners Guide – Google Design
+            <p>
+                Font: Roboto<br>
+                Backup font: Arial, Helvetica, sans-serif<br>
+                Use location: It will be used as the primary font and will be located in the whole body of the site.
+            </p>
+            <p>
+                Font: Yarndings<br>
+                Backup font: serif<br>
+                Use location: It will be used to create flower text in the footer.
+            </p>
         </section>
         <section>
             <h2>Wireframe</h2>
