added use locations

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -55,7 +55,7 @@ Reason: I want to create a new website for my art.
             <p>This site is for Burgener Art.</p>
             <p>
                 This site provides a hub for people looking for art produced by Brady Burgener.  
-                It will provide a way for the images to be searched, a bio for the artist, and subscription form.
+                It will provide a way for the images to be searched, and a bio for the artist.
             </p>
         </section>
         <section>
@@ -70,10 +70,18 @@ Reason: I want to create a new website for my art.
         </section>
         <section>
             <h2>Color Schema</h2>
-            Color Schema: The color schema refers to the carefully selected site colors. Define at least two colors and 
-            show where each color selected will be used, such as headings, paragraphs, background colors, accents, and so on.
-                ! Use your selected color schema on this document.
-                How to Choose Good Website Color Schemes – websitebuilderexpert.com
+            <p>
+                Primary Background Color: #2b2bd3<br>
+                -Main use: Header and Footer<br>
+                Seconday Background Color: #7fd6ff<br>
+                -Main use: body<br>
+                Tertiary Background Color: #eee<br>
+                -Main use: main<br>
+                Primary Text Color: #000<br>
+                -Main use: main<br>
+                Secondary Text Color: #eee<br>
+                -Main use: Header and Footer
+            </p>
         </section>
         <section>
             <h2>Typography</h2>
