--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -55,30 +55,36 @@ Reason: I want to create a new website for my art.
             <p>This site is for Burgener Art.</p>
             <p>
                 This site provides a hub for people looking for art produced by Brady Burgener.  
-                It will provide a way for the images to be searched, and a bio for the artist.
+                It will provide a way for the images of the art to be searched, and a bio for the artist.
             </p>
         </section>
         <section>
             <h2>Scenarios</h2>
-            Scenarios: Scenarios are questions asked by a site visitor who represents the organization's target audience. 
-            The questions will help you drive the content of the website as it provides answers to the questions. Again, 
-            much of the content specifications will actually be provided but start thinking about the target audience of 
-            the site. Include at least two scenarios.
-                Example: for the Bay Area eBiking Club
-                • What is the best e-bike to get for mountainous areas?
-                • Where can I find contact information for the club's directors?
+            <p>
+                What are the sizes of paintings available?<br>
+                Where can I find information about the artist?<br>
+                Where can I find out more information about the art?<br>
+            </p>   
         </section>
         <section>
             <h2>Color Schema</h2>
             <p>
                 Primary Background Color: #2b2bd3<br>
-                -Main use: Header and Footer<br>
+                -Main use: Header and Footer
+            </p>
+            <p>
                 Seconday Background Color: #7fd6ff<br>
-                -Main use: body<br>
+                -Main use: body
+            </p>
+            <p>
                 Tertiary Background Color: #eee<br>
-                -Main use: main<br>
+                -Main use: main
+            </p>
+            <p>
                 Primary Text Color: #000<br>
-                -Main use: main<br>
+                -Main use: main
+            </p>
+            <p>
                 Secondary Text Color: #eee<br>
                 -Main use: Header and Footer
             </p>
@@ -98,9 +104,14 @@ Reason: I want to create a new website for my art.
         </section>
         <section>
             <h2>Wireframe</h2>
-            Wireframe: Design a wireframe of your project's home page layout. Wireframe diagrams can be simple and do not need to have actual content, just representations of content and their layout relationship. Provide a sketch of the home page for the mobile view and for a larger view (wide desktop).
-                What is a Wireframe? – evolve
-                Remember that earlier in the course you worked with a given wireframe. Country/Place Page
+            <figure>
+                <img src="./images/mobile_view.png" alt="mobile view of website">
+                <figcaption>Mobile Sive View Wireframe</figcaption>
+            </figure>
+            <figure>
+                <img src="./images/large_view.png" alt="desktop view of website">
+                <figcaption>Desktop Sive View Wireframe</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
