--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -106,11 +106,11 @@ Reason: I want to create a new website for my art.
             <h2>Wireframe</h2>
             <figure>
                 <img src="./images/mobile_view.png" alt="mobile view of website">
-                <figcaption>Mobile Sive View Wireframe</figcaption>
+                <figcaption>Mobile Size View Wireframe</figcaption>
             </figure>
             <figure>
                 <img src="./images/large_view.png" alt="desktop view of website">
-                <figcaption>Desktop Sive View Wireframe</figcaption>
+                <figcaption>Desktop Size View Wireframe</figcaption>
             </figure>
         </section>
     </main>
